--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,15 @@ services:
     brevets:
         build: brevets/.
         command: python flask_brevets.py
-        ports: 
+        ports:
           - "5001:5000"
+        environment:
+            MONGODB_HOSTNAME: brevetsdb
+        depends_on:
+          - brevetsdb
+        volumes:
+          - type: bind
+            source: brevets/
+            target: /app
+    brevetsdb:
+        image: mongo:5.0.5
